--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "redux": "^4.0.5",
     "react-router-dom": "^5.1.2"
   },
-  "proxy": "http://localhost:3001",
   "scripts": {
     "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "run-p server start-react"
+    "start": "start-react"
   },
   "eslintConfig": {
     "extends": "react-app"
