--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
     "react-scripts": "3.4.0",
     "react-tooltip": "^4.0.3",
     "redux": "^4.0.5",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.6.1"
   },
+  "proxy": "https://localhost:3001",
   "scripts": {
     "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "start-react"
+    "start": "run-p server start-react"
   },
   "eslintConfig": {
     "extends": "react-app"
