--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "run-p server start-react"
+    "start": "run-p start-react server "
   },
   "eslintConfig": {
     "extends": "react-app"
