--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.6.1"
   },
-  "proxy": "https://localhost:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "run-p start-react server "
+    "start": "run-p start-react"
   },
   "eslintConfig": {
     "extends": "react-app"
