--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.1.2",
     "react-tooltip": "^4.0.3",
     "redux": "^4.0.5",
     "react-router-dom": "^5.1.2",
@@ -21,13 +21,14 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.6.1"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "run-p start-react"
+    "start": "run-p server start-react"
   },
   "eslintConfig": {
     "extends": "react-app"
