--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.1.2",
+    "react-scripts": "3.4.0",
     "react-tooltip": "^4.0.3",
     "redux": "^4.0.5",
     "react-router-dom": "^5.1.2",
@@ -28,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "run-p server start-react"
+    "start": "run server",
+    "heroku-postbuild": "npm start-react"
   },
   "eslintConfig": {
     "extends": "react-app"
