--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "start": "node-env-run server --exec nodemon",
+    "start": "node-env-run server --exec nodemon && run start-react ",
     "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
