--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
+
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+
+    "client-install": "npm install",
+    "client": "npm start-react",
+    "start-react": "react-scripts start",
+    "start": "node server",
+    "server": "node-env-run server --exec nodemon",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild":      "NPM_CONFIG_PRODUCTION=false npm install && npm run build "
 },
   "eslintConfig": {
     "extends": "react-app"
