--- a/package.json
+++ b/package.json
@@ -21,21 +21,13 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.6.1"
   },
-  "proxy": "http://localhost:5000",
-  "scripts": {
 
+  "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
-    "client-install": "npm install",
-    "client": "npm start-react",
-    "start-react": "react-scripts start",
-
-    "server": "node-env-run server --exec nodemon",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":      "NPM_CONFIG_PRODUCTION=false npm install && npm run build "
-},
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
