--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^1.6.1"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "eslintConfig": {
     "extends": "react-app"
